[package]
name = "keyboard-warrior"
version = "0.5.0"
edition = "2021"
authors = ["Dr. Baklava"]
description = "Finally, a reason to be a keyboard warrior. A high-fantasy typing roguelike for the terminal."
readme = "README.md"
license = "MIT"
keywords = ["typing", "game", "rpg", "roguelike", "tui"]
categories = ["games", "command-line-utilities"]
repository = "https://github.com/cd4u2b0z/keyboard-warrior"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Serialization for save files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"

# Random generation
rand = "0.8"

# Time handling  
chrono = "0.4"

# Directory paths (for save files)
dirs = "5.0"

# Text width calculations
unicode-width = "0.1"

# Better panic messages in debug mode
better-panic = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
